# chess-distill

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  PROJECT_DOCS.md  README.md  pyproject.toml
scripts/: diagnose_moves.py  eval_vs_stockfish.py  gen_labels.py  play_cli.py  test_augmentation.py  test_mcts.py  train_policy_value.py  verify_env.py
src/chess_distill/: config.py  dataset.py  encode.py  infer.py  loss.py  mcts.py  model.py  moves.py  train.py  uci.py  utils.py
src/chess_distill.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_encode_roundtrip.py  test_engine_query.py  test_perspective.py
