[project]
name = "chess-distill"
version = "0.1.0"
description = "Distilling Stockfish into a Policy+Value network"
authors = [{ name = "Senior ML Engineer" }]
dependencies = [
    "torch",
    "chess",
    "numpy",
    "tqdm",
    "pyarrow",
    "pandas",
    "rich",
    "pytest",
    "ruff",
]
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
